Add - The Initial Commit

--- a/index.html
+++ b/index.html
@@ -7,6 +7,36 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <section class="dashboard">
+        <p><h1>Dashboard</h1></p><bx>
+        <p>Home<br>Profile<br>Messages<br>History<br>Tasks<br>Communities<br><br><br>Settings<br>Support<br>Privacy</p>
+    </section>
+    <div class="profile">
+        <p>Nithish N T</p>
+    </div>
+    <div class="container">
+        <div><h3>Super Cool Projects</h3>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet nam ad, quas repellat quis quasi, vel aut, aperiam non tempore suscipit praesentium. A consequatur eos temporibus deserunt voluptates rem iure!</div>
+        <div><h3>Less Cool Projects</h3>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores, natus commodi odit sit modi, nostrum itaque at aut ad consequatur, tempore voluptatibus reprehenderit veniam vel architecto blanditiis velit asperiores aliquam!</div>
+        <div><h3>Impossible App</h3>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat distinctio pariatur optio beatae placeat consequuntur quo, vel voluptas non sit voluptatum iure nihil, eveniet eius nisi molestias dicta, tempore quia.</div>
+        <div><h3>Easy Peasy App</h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel rem doloremque magnam dolore illo delectus quibusdam nam aliquam blanditiis numquam! Culpa magni dolorum laborum ad voluptas! Recusandae quo earum dolore.</div>
+        <div><h3>Ad Blocker</h3>lorem ipsum dolor sit amet consectetur adipisicing elit. Earum iste, aperiam unde consectetur voluptatibus, impedit fuga ducimus, voluptates velit dicta voluptatem veritatis vero magni id fugiat? Eos totam distinctio quisquam?</div>
+        <div><h3>Money Making App</h3>lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis cum tenetur reiciendis maxime architecto odio delectus laudantium, voluptas debitis doloremque perferendis doloribus minima commodi temporibus in repudiandae a tempore e</div>
+    </div>
+    <section class="announcements">
+        <div id="sm">
+            <p><h3>Site Maintanence</h3></p><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus quasi magnam veritatis culpa! Mollitia incidunt magnam blanditiis architecto, aspernatur ipsam soluta itaque repellat. Ut doloremque, nesciunt accusamus vel numquam ipsa.</p>
+        </div>
+        <div id="csd">
+            <p><h3>Community Share Day</h3></p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur error totam doloribus eligendi laboriosam quia accusantium, odit omnis repellat! Laudantium sit nisi reprehenderit velit ducimus laboriosam nesciunt aspernatur sed animi.</p>
+        </div>
+        <div id="upp">
+            <p><h3>Updated Privacy Policy</h3></p><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque quam praesentium quos neque in, necessitatibus ad facilis, fuga facere cupiditate molestiae unde laudantium, minima beatae aperiam ducimus. Sapiente, earum omnis?</p>
+        </div>
+    </section>
+    <section class="people">
+        <div>
+            <p>@Carlo<br>@Jenny<br>@Jashwanth</p>
+        </div>
+    </section>
 </body>
 </html>
